--- a/tools/Projects/src/Strings/en-us/Resources.resw
+++ b/tools/Projects/src/Strings/en-us/Resources.resw
@@ -124,6 +124,6 @@
     <value>✖️</value>
   </data>
   <data name="ProjectsPage_Title.Text" xml:space="preserve">
-    <value>Projects</value>
+    <value>My Projects</value>
   </data>
 </root>
