Get stuff on the screen

--- a/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
+++ b/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
@@ -58,6 +58,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExtensionLibraryPage_Title.Text" xml:space="preserve">
+    <value>Extensions</value>
+    <comment>Header text for Extension Library page</comment>
+  </data>
   <data name="NavigationPane.Content" xml:space="preserve">
     <value>Extensions</value>
     <comment>Navigation pane content</comment>
