--- a/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
+++ b/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
@@ -78,9 +78,17 @@
     <value>Get updates</value>
     <comment>Button that allows the user to check if the store has updates for current packages</comment>
   </data>
+  <data name="ManageExtensionCard.Header" xml:space="preserve">
+    <value>Manage extension</value>
+    <comment>Label for the link to that extension's settings</comment>
+  </data>
   <data name="AvailableFromStoreTextBlock.Text" xml:space="preserve">
     <value>Available from the Store</value>
     <comment>Header for the list of packages available for download from the store</comment>
+  </data>
+  <data name="GetButton.Content" xml:space="preserve">
+    <value>Get</value>
+    <comment>Text on button that allows user to get the package from the store</comment>
   </data>
   <data name="UninstallItem.Text" xml:space="preserve">
     <value>Uninstall</value>
