--- a/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
+++ b/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Strings/en-us/Resources.resw
@@ -70,8 +70,8 @@
     <value>Extensions</value>
     <comment>Header text for Extension Library page</comment>
   </data>
-  <data name="OnYourPcTextBlock.Text" xml:space="preserve">
-    <value>On your PC</value>
+  <data name="InstalledTextBlock.Text" xml:space="preserve">
+    <value>Installed</value>
     <comment>Header for the list of packages currently installed on the user's computer</comment>
   </data>
   <data name="GetUpdatesButton.Content" xml:space="preserve">
@@ -83,7 +83,7 @@
     <comment>Label for the link to that extension's settings</comment>
   </data>
   <data name="AvailableFromStoreTextBlock.Text" xml:space="preserve">
-    <value>Available from the Store</value>
+    <value>Available in the Microsoft Store</value>
     <comment>Header for the list of packages available for download from the store</comment>
   </data>
   <data name="GetButton.Content" xml:space="preserve">
